feat: add device triggers and prepare 0.2.0 release

--- a/.gitignore
+++ b/.gitignore
@@ -5,9 +5,16 @@ __pycache__/
 .env
 .venv
 .envrc
+.ruff_cache/
 .mypy_cache/
 .pytest_cache/
+.coverage
+coverage.xml
+htmlcov/
+dist/
+build/
 .idea/
 .vscode/
 .ha-cache/
 *.egg-info/
+.DS_Store
