feat: update changelog, manifest, and issue templates for 0.2.0 release

--- a/custom_components/webasto_next_modbus/manifest.json
+++ b/custom_components/webasto_next_modbus/manifest.json
@@ -10,6 +10,8 @@
   "dependencies": [],
   "codeowners": ["@tomwellnitz"],
   "config_flow": true,
+  "homeassistant": "2024.12.0",
+  "integration_type": "hub",
   "iot_class": "local_polling",
   "loggers": ["pymodbus", "custom_components.webasto_next_modbus"]
 }
