--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,7 +11,7 @@ dev = [
   "pytest>=8.2",
   "pytest-homeassistant-custom-component>=0.13",
   "pytest-asyncio>=0.23",
-  "coverage==7.4.3",
+  "coverage>=7.10.6,<8",
   "pytest-cov>=5.0",
   "ruff>=0.5",
   "mypy>=1.8"
