--- a/custom_components/webasto_next_modbus/services.yaml
+++ b/custom_components/webasto_next_modbus/services.yaml
@@ -6,11 +6,20 @@ set_current:
       name: Config entry ID
       description: Optional when only one Webasto Next wallbox is configured.
       example: "d4f4e2e7c3d6499f9bc2f6b4f4bb86a7"
+      selector:
+        config_entry:
+          integration: webasto_next_modbus
     amps:
       name: Current (A)
       description: Desired charging current in ampere.
       required: true
       example: 16
+      selector:
+        number:
+          min: 0
+          max: 32
+          step: 1
+          unit_of_measurement: A
 
 set_failsafe:
   name: Configure fail-safe parameters
@@ -20,16 +29,31 @@ set_failsafe:
       name: Config entry ID
       description: Optional when only one Webasto Next wallbox is configured.
       example: "d4f4e2e7c3d6499f9bc2f6b4f4bb86a7"
+      selector:
+        config_entry:
+          integration: webasto_next_modbus
     amps:
       name: Fallback current (A)
       description: Charging current enforced during fail-safe operation.
       required: true
       example: 10
+      selector:
+        number:
+          min: 6
+          max: 32
+          step: 1
+          unit_of_measurement: A
     timeout_s:
       name: Timeout (s)
       description: Time window without updates before fail-safe mode activates.
       required: false
       example: 30
+      selector:
+        number:
+          min: 6
+          max: 120
+          step: 1
+          unit_of_measurement: s
 
 send_keepalive:
   name: Send keep-alive frame
@@ -39,6 +63,9 @@ send_keepalive:
       name: Config entry ID
       description: Optional when only one Webasto Next wallbox is configured.
       example: "d4f4e2e7c3d6499f9bc2f6b4f4bb86a7"
+      selector:
+        config_entry:
+          integration: webasto_next_modbus
 
 start_session:
   name: Start charging session
@@ -48,6 +75,9 @@ start_session:
       name: Config entry ID
       description: Optional when only one Webasto Next wallbox is configured.
       example: "d4f4e2e7c3d6499f9bc2f6b4f4bb86a7"
+      selector:
+        config_entry:
+          integration: webasto_next_modbus
 
 stop_session:
   name: Stop charging session
@@ -57,3 +87,6 @@ stop_session:
       name: Config entry ID
       description: Optional when only one Webasto Next wallbox is configured.
       example: "d4f4e2e7c3d6499f9bc2f6b4f4bb86a7"
+      selector:
+        config_entry:
+          integration: webasto_next_modbus
