--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [project]
 name = "webasto-next-modbus"
-version = "0.2.4-beta"
+version = "0.3.0-beta.1"
 description = "Home Assistant integration for Webasto Next / Ampure Unite wallboxes via Modbus TCP"
 authors = [{ name = "Webasto Next Modbus maintainers" }]
 readme = "README.md"
@@ -8,6 +8,7 @@ requires-python = ">=3.12"
 
 [project.scripts]
 virtual-wallbox = "virtual_wallbox.cli:main"
+webasto-smoke = "virtual_wallbox.smoke:main"
 
 [project.optional-dependencies]
 dev = [
@@ -18,7 +19,7 @@ dev = [
   "pytest-cov==6.0.0",
   "ruff>=0.5",
   "mypy>=1.8",
-  "pymodbus==3.6.9"
+  "pymodbus>=3.11.2,<4"
 ]
 
 [tool.pytest.ini_options]
