--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -18,21 +18,22 @@ jobs:
       - name: Check out repository
         uses: actions/checkout@v4
 
-      - name: Set up Python ${{ matrix.python-version }}
-        uses: actions/setup-python@v5
+      - name: Install uv
+        uses: astral-sh/setup-uv@v5
         with:
-          python-version: ${{ matrix.python-version }}
-          cache: pip
+          enable-cache: true
+          cache-dependency-glob: "uv.lock"
+
+      - name: Set up Python ${{ matrix.python-version }}
+        run: uv python install ${{ matrix.python-version }}
 
       - name: Install dependencies
-        run: |
-          python -m pip install --upgrade pip
-          python -m pip install -e '.[dev]'
+        run: uv sync
 
       - name: Lint with Ruff
         run: |
-          python -m ruff check custom_components/webasto_next_modbus tests
+          uv run ruff check custom_components/webasto_next_modbus tests
 
       - name: Run tests
         run: |
-          python -m pytest
+          uv run pytest
