--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -15,25 +15,26 @@ jobs:
       - name: Check out repository
         uses: actions/checkout@v4
 
-      - name: Set up Python
-        uses: actions/setup-python@v5
+      - name: Install uv
+        uses: astral-sh/setup-uv@v5
         with:
-          python-version: "3.13"
+          enable-cache: true
+          cache-dependency-glob: "uv.lock"
+
+      - name: Set up Python
+        run: uv python install 3.13
 
       - name: Install dependencies
-        run: |
-          python -m pip install --upgrade pip
-          pip install build
-          pip install -e '.[dev]'
+        run: uv sync
 
       - name: Lint
-        run: ruff check
+        run: uv run ruff check .
 
       - name: Run tests
-        run: pytest
+        run: uv run pytest
 
       - name: Build distribution
-        run: python -m build
+        run: uv build
 
       - name: Publish GitHub Release
         uses: softprops/action-gh-release@v1
