--- a/custom_components/webasto_next_modbus/manifest.json
+++ b/custom_components/webasto_next_modbus/manifest.json
@@ -1,22 +1,27 @@
 {
   "domain": "webasto_next_modbus",
   "name": "Webasto Next Modbus",
-  "version": "0.4.0-beta.9",
+  "codeowners": [
+    "@tomwellnitz"
+  ],
+  "config_flow": true,
+  "dependencies": [],
   "documentation": "https://github.com/tomwellnitz/Webasto-Next-Modbus",
+  "integration_type": "hub",
+  "iot_class": "local_polling",
   "issue_tracker": "https://github.com/tomwellnitz/Webasto-Next-Modbus/issues",
+  "loggers": [
+    "pymodbus",
+    "custom_components.webasto_next_modbus"
+  ],
   "requirements": [
     "pymodbus>=3.11.2,<4"
   ],
-  "dependencies": [],
-  "codeowners": ["@tomwellnitz"],
-  "config_flow": true,
+  "version": "0.4.0-beta.9",
   "zeroconf": [
     {
       "type": "_http._tcp.local.",
       "name": "next-ws*"
     }
-  ],
-  "integration_type": "hub",
-  "iot_class": "local_polling",
-  "loggers": ["pymodbus", "custom_components.webasto_next_modbus"]
+  ]
 }
