--- a/custom_components/webasto_next_modbus/manifest.json
+++ b/custom_components/webasto_next_modbus/manifest.json
@@ -17,7 +17,7 @@
   "requirements": [
     "pymodbus>=3.11.2,<4"
   ],
-  "version": "1.0.0",
+  "version": "1.1.0-beta.1",
   "zeroconf": [
     {
       "type": "_http._tcp.local.",
