--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,12 +1,13 @@
 [project]
 name = "webasto-next-modbus"
-version = "1.0.0"
+version = "1.1.0-beta.1"
 description = "Home Assistant integration for Webasto Next / Ampure Unite wallboxes via Modbus TCP"
 authors = [{ name = "Webasto Next Modbus maintainers" }]
 readme = "README.md"
 requires-python = ">=3.13.2"
 dependencies = [
     "pymodbus>=3.11.2,<4",
+    "aiohttp>=3.9.0",
 ]
 
 [project.scripts]
@@ -67,11 +68,14 @@ dev = [
     "yamllint>=1.37.1",
 ]
 
+[tool.deptry]
+extend_exclude = ["scripts"]
+
 [tool.deptry.per_rule_ignores]
 DEP003 = ["custom_components"]
 DEP004 = ["homeassistant", "voluptuous"]
 
 [tool.codespell]
 skip = "*.pdf,*.log,*.log.*,*.csv"
-ignore-words-list = "hass,alle,unter,adresse,ist,oder,paket,intervall,stopp,startet"
+ignore-words-list = "hass,alle,unter,adresse,ist,oder,paket,intervall,stopp,startet,aktive"
 
