--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,8 +1,8 @@
 [project]
 name = "webasto-next-modbus"
-version = "1.1.0-beta.1"
-description = "Home Assistant integration for Webasto Next / Ampure Unite wallboxes via Modbus TCP"
-authors = [{ name = "Webasto Next Modbus maintainers" }]
+version = "1.1.0-beta.2"
+description = "Home Assistant integration for Webasto Next / Ampure Unite wallboxes via Modbus TCP and REST API"
+authors = [{ name = "Webasto Next maintainers" }]
 readme = "README.md"
 requires-python = ">=3.13.2"
 dependencies = [
