--- a/.gitignore
+++ b/.gitignore
@@ -22,3 +22,6 @@ ha-config/
 *.egg-info/
 .DS_Store
 scripts/life_bit_minimal.py
+tests/test_rest_client.py
+scripts/analyze_webinterface.py
+scripts/capture_api.py
