chore: update version to 1.1.0-beta.5 and fix zeroconf name

--- a/custom_components/webasto_next_modbus/manifest.json
+++ b/custom_components/webasto_next_modbus/manifest.json
@@ -19,11 +19,11 @@
     "pymodbus>=3.11.2,<4",
     "aiohttp>=3.9.0"
   ],
-  "version": "1.1.0-beta.4",
+  "version": "1.1.0-beta.5",
   "zeroconf": [
     {
       "type": "_http._tcp.local.",
-      "name": "next-ws*"
+      "name": "next-ws"
     }
   ]
 }
