--- a/custom_components/webasto_next_modbus/manifest.json
+++ b/custom_components/webasto_next_modbus/manifest.json
@@ -19,7 +19,7 @@
     "pymodbus>=3.11.2,<4",
     "aiohttp>=3.9.0"
   ],
-  "version": "1.1.0-beta.5",
+  "version": "1.1.1",
   "zeroconf": [
     {
       "type": "_http._tcp.local.",
