--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -38,8 +38,7 @@ jobs:
 
       - name: Zip custom component
         run: |
-          cd custom_components
-          zip -r ../webasto_next_modbus.zip webasto_next_modbus
+          zip -r webasto_next_modbus.zip custom_components/webasto_next_modbus blueprints
 
       - name: Extract release notes
         id: extract_release_notes
